fix overflow

--- a/src/screens/MovieDetailScreen/MovieDetailScreen.scss
+++ b/src/screens/MovieDetailScreen/MovieDetailScreen.scss
@@ -6,7 +6,7 @@
   @include expand;
   background-color: $color-backgroundYellow;
   color: $color-white;
-  width: 100%;
+
   justify-content: start;
   align-items: start;
   padding: 15px;
